@@ -1,5 +1,3 @@
 erp5_mysql_innodb/SQLCatalog_makeContentTranslationSearchQuery
-erp5_mysql_innodb/z0_drop_content_translation
 erp5_mysql_innodb/z0_uncatalog_content_translation
 erp5_mysql_innodb/z_catalog_content_translation_list
-erp5_mysql_innodb/z_create_content_translation
