@@ -1,4 +1,5 @@
 2012-01-05 Kazuhiko
+* move create/drop table SQL for content_translation table from erp5_content_translation to erp5_full_text_*_catalog BT.
 * rename from erp5_full_text_groonga_catalog to erp5_full_text_mroonga_catalog.
 
 2011-11-01 kazuhiko
