@@ -1,3 +1,6 @@
+2012-01-05 Kazuhiko
+* move create/drop table SQL for content_translation table from erp5_content_translation to erp5_full_text_*_catalog BT.
+
 2011-12-20 Kazuhiko
 * use groonga storage engine instead of MyISAM.
 
